# lake-sync

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md
.cargo/: config
.github/workflows/: ci.yml
migrations/2022-05-06-095255_lake_sync_initialize/: down.sql  up.sql
migrations/2022-05-15-102205_lake_sync_initilalize/: up.sql
migrations/2022-05-16-092306_lake-sync-initilalize/: up.sql
src/: chain.rs  db.rs  down.sql  main.rs  up.sql
src/abi/: abis.rs  mod.rs  uniswap_v2_factory.json
src/chain/: ethereum.rs
src/db/: assembler.rs  mod.rs  models.rs  postgres.rs  schema.rs
src/dex/: aggregator.rs  assembler.rs  mod.rs  models.rs  subscriber.rs  temp_code.rs
