[package]
name = "lake-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-web = "4"
actix = "0.13.0"

diesel = { version = "1.4.8", features = ["postgres", "extras", "r2d2"] }
dotenv = "0.15.0"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

ethers = { version = "0.6.2", features = ["ws", "rustls" ] }
web3 = "0.18.0"

tokio = { version= "1", features = ["full"] }

hex-literal = "0.3"
env_logger = "0.9.0"
hex = "0.4"